# msp-scraper

./: README.md
crew-up/apps/web/: next.config.js  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
crew-up/docs/: deployment-readiness-checklist.md  deployment-steps.md  email-domain-placeholders.md  local-production-testing.md  supabase-migration-instructions.md  supabase-setup-guide.md
crew-up/docs/stories/: 1.1-dod-checklist-results.md  1.1.foundation-infrastructure.md  2.1.core-profile-system.md  3.1-validation-report.md  3.1.seo-optimization-foundation.md  4.1-dod-checklist-results.md  4.1-pov-validation-report.md  4.1-search-discovery-checklist-validation.md  4.1.search-discovery.md  5.1-contact-flow-checklist-validation.md  5.1-dod-checklist-results.md  5.1-pov-validation-report.md  5.1.contact-flow.md  6.1-dod-checklist-results.md  (+7 more)
msp-scraper/: .env.example  .gitignore  PHASE2_COMPLETE.md  README.md  READY_TO_TEST.md  SETUP_COMPLETE.md  pyproject.toml
msp-scraper/docs/: quick-start.md
msp-scraper/scripts/: export_data.py  init_db.py  run_scraper.py  test_yelp.py
msp-scraper/src/config/: constants.py  logging_config.py  settings.py
msp-scraper/src/models/: __init__.py  base.py  business.py  contact.py  scrape_job.py  scrape_source.py
msp-scraper/src/scrapers/: base_scraper.py
msp-scraper/src/scrapers/directories/: clutch.py  google_places.py  msp501.py  reddit_msp.py  yelp.py
msp-scraper/src/services/: data_processor.py  quality_scorer.py
msp-scraper/src/utils/: http_client.py  robots_checker.py  validators.py
(+106 files in other folders)
